Projeto PHP - FPIN
Iniciando modificações PHP
-- logon do usuário
-- cadastro de candidato
-- listagem dos candidatos ( incompleto )

--- a/organizadorlogado.html
+++ b/organizadorlogado.html
@@ -10,14 +10,14 @@
 			<section id="geral">
 				<header>				
 					<menu>
-						<a href="index.html" class="item">PÁGINA INICIAL</a>
+						<a href="index.php" class="item">PÁGINA INICIAL</a>
 						<a href="#myBtn" class="item" id="myBtn">EDITAR INFORMAÇÕES</a>									
 						<a href="cad_partido.html" class="item">GERENCIAR PARTIDO</a>
 						<a href="cad_estado.html" class="item">GERENCIAR ESTADO</a>
-						<a href="index.html" class="item">SAIR</a>
+						<a href="index.php" class="item">SAIR</a>
 					</menu>
 					<div id="logo">
-						<a href="index.html" > <img src="image/logotipo.png" class="logo"> </a>
+						<a href="index.php" > <img src="image/logotipo.png" class="logo"> </a>
 					</div>
 					<div id="ad">
 						<h1 id="titulo">Bem-vindos à Wikilítica</h1>
@@ -103,7 +103,7 @@
 						</div>
 						<div id="minibar2"> <h5 class="recent5"> PÁGINAS </h5> </div>
 						<div id="finish">
-							<a href="index.html" class="fim1"> Página Inicial </a>
+							<a href="index.php" class="fim1"> Página Inicial </a>
 							<a href="candidatos.html" class="fim2"> Candidatos </a>
 							<a href="partidos.html" class="fim3"> Partidos </a>
 						</div>
