--- a/candidato.html
+++ b/candidato.html
@@ -11,18 +11,18 @@
 			<section id="geral">
 				<header>				
 					<menu>
-						<a href="index.html" class="item">PÁGINA INICIAL</a>
+						<a href="index.php" class="item">PÁGINA INICIAL</a>
 						<a href="#myBtn" class="item" id="myBtn">CRIAR CONTA</a>
 						<a href="#myBtn2" class="item" id="myBtn2">ENTRAR</a>
 					</menu>
 					<div id="logo">
-						<a href="index.html" > <img src="image/logotipo.png" class="logo"> </a>
+						<a href="index.php" > <img src="image/logotipo.png" class="logo"> </a>
 					</div>
 					<div id="ad">
 						<h1 id="titulo">Bem-vindos à Wikilítica</h1>
 					</div>
 					<nav id="barra1">
-						<a href="index.html" class="item3"> <img src="image/home.png" class="home"> </a>
+						<a href="index.php" class="item3"> <img src="image/home.png" class="home"> </a>
 						<a href="candidatos.html" class="item2">CANDIDATOS</a>
 						<a href="partidos.html" class="item2">PARTIDOS</a>
 						<a href="cidadestado.html" class="item2">CIDADES/ESTADOS</a>
