--- a/sobre.html
+++ b/sobre.html
@@ -22,8 +22,8 @@
 					</div>
 					<nav id="barra1">
 						<a href="index.php" class="item3"> <img src="image/home.png" class="home"> </a>
-						<a href="candidatos.html" class="item2">CANDIDATOS</a>
-						<a href="partidos.html" class="item2">PARTIDOS</a>
+						<a href="candidatos.php" class="item2">CANDIDATOS</a>
+						<a href="partidos.php" class="item2">PARTIDOS</a>
 						<a href="cidadestado.html" class="item2">CIDADES/ESTADOS</a>
 						<a href="sobre.html" class="item2">SOBRE</a>
 						<form name="" method="" action="">							
@@ -62,10 +62,10 @@
 							
 							<ul class="mapa">
 								<li class="orange"> <a href="index.php"> Página Inicial </a> </li>
-								<li class="gold"> <a href="candidatos.html"> Candidatos </a> </li>
+								<li class="gold"> <a href="candidatos.php"> Candidatos </a> </li>
 								<li class="gold"> <a href="cad_candidato.php"> Cadastro Candidato </a> </li>
-								<li class="green"> <a href="partidos.html"> Partidos </a> </li>
-								<li class="green"> <a href="cad_partido.html"> Cadastro Partido </a> </li>
+								<li class="green"> <a href="partidos.php"> Partidos </a> </li>
+								<li class="green"> <a href="cad_partido.php"> Cadastro Partido </a> </li>
 								<li class="blue"> <a href="cidadestado.html"> Cidades/Estados </a> </li>
 								<li class="blue"> <a href="cad_estado.html"> Cadastro Cidade </a> </li>								
 								<li class="orange"> <a href="sobre.html"> Sobre </a> </li>
@@ -114,8 +114,8 @@
 						<div id="minibar2"> <h5 class="recent5"> PÁGINAS </h5> </div>
 						<div id="finish">
 							<a href="index.php" class="fim1"> Página Inicial </a>
-							<a href="candidatos.html" class="fim2"> Candidatos </a>
-							<a href="partidos.html" class="fim3"> Partidos </a>
+							<a href="candidatos.php" class="fim2"> Candidatos </a>
+							<a href="partidos.php" class="fim3"> Partidos </a>
 						</div>
 					</section>
 				</section>
@@ -197,7 +197,7 @@
     <!-- <span class="close">&times;</span> -->
     <div class="form">
 	  <h1> Logar </h1>
-	  <form action="organizadorlogado.html" method="">
+	  <form action="organizadorlogado.php" method="">
 		<label for="fname">E-mail:</label>
 		<input class="cad_user" type="email" id="user_mail" name="email" placeholder="Preencha com seu e-mail">
 		
