--- a/sobre.html
+++ b/sobre.html
@@ -24,7 +24,7 @@
 						<a href="index.php" class="item3"> <img src="image/home.png" class="home"> </a>
 						<a href="candidatos.php" class="item2">CANDIDATOS</a>
 						<a href="partidos.php" class="item2">PARTIDOS</a>
-						<a href="cidadestado.html" class="item2">CIDADES/ESTADOS</a>
+						<a href="cidadeestado.php" class="item2">CIDADES/ESTADOS</a>
 						<a href="sobre.html" class="item2">SOBRE</a>
 						<form name="" method="" action="">							
 							<input type="search" name="search" placeholder="Pesquisar na Wiki" title="Pesquisar" id="pesqInput" tabindex="1" autocomplete="off">
@@ -66,7 +66,7 @@
 								<li class="gold"> <a href="cad_candidato.php"> Cadastro Candidato </a> </li>
 								<li class="green"> <a href="partidos.php"> Partidos </a> </li>
 								<li class="green"> <a href="cad_partido.php"> Cadastro Partido </a> </li>
-								<li class="blue"> <a href="cidadestado.html"> Cidades/Estados </a> </li>
+								<li class="blue"> <a href="cidadeestado.php"> Cidades/Estados </a> </li>
 								<li class="blue"> <a href="cad_estado.html"> Cadastro Cidade </a> </li>								
 								<li class="orange"> <a href="sobre.html"> Sobre </a> </li>
 							</ul>						
