--- a/sobre.html
+++ b/sobre.html
@@ -67,7 +67,7 @@
 								<li class="green"> <a href="partidos.php"> Partidos </a> </li>
 								<li class="green"> <a href="cad_partido.php"> Cadastro Partido </a> </li>
 								<li class="blue"> <a href="cidadeestado.php"> Cidades/Estados </a> </li>
-								<li class="blue"> <a href="cad_estado.html"> Cadastro Cidade </a> </li>								
+								<li class="blue"> <a href="cad_estado.php"> Cadastro Cidade </a> </li>								
 								<li class="orange"> <a href="sobre.html"> Sobre </a> </li>
 							</ul>						
 						</div>
