--- a/partido.html
+++ b/partido.html
@@ -16,13 +16,13 @@
 						<a href="#myBtn2" class="item" id="myBtn2">ENTRAR</a>
 					</menu>
 					<div id="logo">
-						<a href="index.php" > <img src="image/logotipo.png" class="logo"> </a>
+						<a href="usuariologado.php" > <img src="image/logotipo.png" class="logo"> </a>
 					</div>
 					<div id="ad">
 						<h1 id="titulo">Bem-vindos à Wikilítica</h1>
 					</div>
 					<nav id="barra1">
-						<a href="index.php" class="item3"> <img src="image/home.png" class="home"> </a>
+						<a href="usuariologado.php" class="item3"> <img src="image/home.png" class="home"> </a>
 						<a href="candidatos.php" class="item2">CANDIDATOS</a>
 						<a href="partidos.php" class="item2">PARTIDOS</a>
 						<a href="cidadeestado.php" class="item2">CIDADES/ESTADOS</a>
@@ -156,7 +156,7 @@
     <!-- <span class="close">&times;</span> -->
     <div class="form">
 	  <h1> Logar </h1>
-	  <form action="usuariologado.html" method="">
+	  <form action="usuariologado.php" method="">
 		<label for="fname">E-mail:</label>
 		<input class="cad_user" type="email" id="user_mail" name="email" placeholder="Preencha com seu e-mail">
 		
