--- a/sobre.html
+++ b/sobre.html
@@ -10,18 +10,18 @@
 			<section id="geral">
 				<header>				
 					<menu>
-						<a href="index.php" class="item">PÁGINA INICIAL</a>
+						<a href="usuariologado.php" class="item">PÁGINA INICIAL</a>
 						<a href="#myBtn" class="item" id="myBtn">CRIAR CONTA</a>
 						<a href="#myBtn2" class="item" id="myBtn2">ENTRAR</a>
 					</menu>
 					<div id="logo">
-						<a href="index.php" > <img src="image/logotipo.png" class="logo"> </a>
+						<a href="usuariologado.php" > <img src="image/logotipo.png" class="logo"> </a>
 					</div>
 					<div id="ad">
 						<h1 id="titulo">Bem-vindos à Wikilítica</h1>
 					</div>
 					<nav id="barra1">
-						<a href="index.php" class="item3"> <img src="image/home.png" class="home"> </a>
+						<a href="usuariologado.php" class="item3"> <img src="image/home.png" class="home"> </a>
 						<a href="candidatos.php" class="item2">CANDIDATOS</a>
 						<a href="partidos.php" class="item2">PARTIDOS</a>
 						<a href="cidadeestado.php" class="item2">CIDADES/ESTADOS</a>
@@ -61,7 +61,7 @@
 							<br><h3>Mapa do Site</h3>
 							
 							<ul class="mapa">
-								<li class="orange"> <a href="index.php"> Página Inicial </a> </li>
+								<li class="orange"> <a href="usuariologado.php"> Página Inicial </a> </li>
 								<li class="gold"> <a href="candidatos.php"> Candidatos </a> </li>
 								<li class="gold"> <a href="cad_candidato.php"> Cadastro Candidato </a> </li>
 								<li class="green"> <a href="partidos.php"> Partidos </a> </li>
@@ -113,7 +113,7 @@
 						</div>
 						<div id="minibar2"> <h5 class="recent5"> PÁGINAS </h5> </div>
 						<div id="finish">
-							<a href="index.php" class="fim1"> Página Inicial </a>
+							<a href="usuariologado.php" class="fim1"> Página Inicial </a>
 							<a href="candidatos.php" class="fim2"> Candidatos </a>
 							<a href="partidos.php" class="fim3"> Partidos </a>
 						</div>
