otimização da repetição de código
-- index.php pega ultimos candidatos cadastrados

-- tentativa de fazer com que a página candidato.php pegue as propostas,ideias  e fontes do banco de dados.

-- tentativa de fazer upload da foto do candidato para o banco de dados sem sucesso.

--- a/sobre.html
+++ b/sobre.html
@@ -81,7 +81,7 @@
 						<div id="pesq">
 							<img src="image/graphic.png" class="graph">
 						<nav id="barra6">
-							<a class="recent2"> RECENTES </a>
+							<a class="recent2"> DESTAQUES </a>
 							<a class="recent3">  </a>
 							<a class="recent4">  </a>
 						</nav>
