--- a/sobre.html
+++ b/sobre.html
@@ -53,7 +53,7 @@
 									<a href="#">Lukas Teixeira (teixeiralukas@hotmail.com)</a>
 								</li>
 								<li class="blue">
-									<a href="#">Natalício Nune (nata_caja@hotmail.com) </a>
+									<a href="#">Natalício Nunes (nata_caja@hotmail.com) </a>
 								</li>
 							</ul>
 							  
